# CatBowlWatch

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
demo/: .env.example
docs/: ARCHITECTURE.md  DESIGN_REQUIREMENTS.md
inference/: CMakeLists.txt
inference/src/: CMakeLists.txt  bowl_tracker.cpp  bowl_tracker.hpp  capture.cpp  capture.hpp  config.hpp  debounce_engine.cpp  debounce_engine.hpp  http_server.cpp  http_server.hpp  inference_backend.hpp  main.cpp  onnx_backend.cpp  onnx_backend.hpp  postprocessor.cpp  postprocessor.hpp  preprocessor.cpp  preprocessor.hpp  service_main.cpp  telegram_notifier.cpp  telegram_notifier.hpp  types.hpp
inference/tests/: CMakeLists.txt  test_bowl_tracker.cpp  test_debounce_engine.cpp  test_postprocessor.cpp  test_preprocessor.cpp  test_smoke.cpp  test_telegram_notifier.cpp
scripts/: _generate_synthetic.py  benchmark_inference.py  collect_data.py  organise_raw.py  setup_macos_dev.sh  setup_wsl_dev.sh  split_dataset.py  validate_labels.py
tests/: conftest.py  test_augmentations.py  test_benchmark_inference.py  test_dataset.py  test_export.py  test_organise_raw.py  test_split_dataset.py  test_train.py  test_validate_labels.py
training/: augmentations.py  dataset.py  export.py  train.py
